import Foundation

enum OnboardingEvent {
    case pageChanged(Int)
    case `continue`
    case skip
}
